; ModuleID = '/home/carl/AnghaBench/linux/drivers/char/agp/extr_via-agp.c_via_tlbflush_agp3.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/char/agp/extr_via-agp.c_via_tlbflush_agp3.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }
%struct.agp_memory = type { i32 }

@agp_bridge = common dso_local global %struct.TYPE_2__* null, align 8
@VIA_AGP3_GARTCTRL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.agp_memory*)* @via_tlbflush_agp3 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @via_tlbflush_agp3(%struct.agp_memory* %0) #0 {
  %2 = alloca %struct.agp_memory*, align 8
  %3 = alloca i32, align 4
  store %struct.agp_memory* %0, %struct.agp_memory** %2, align 8
  %4 = load %struct.TYPE_2__*, %struct.TYPE_2__** @agp_bridge, align 8
  %5 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  %7 = load i32, i32* @VIA_AGP3_GARTCTRL, align 4
  %8 = call i32 @pci_read_config_dword(i32 %6, i32 %7, i32* %3)
  %9 = load %struct.TYPE_2__*, %struct.TYPE_2__** @agp_bridge, align 8
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = load i32, i32* @VIA_AGP3_GARTCTRL, align 4
  %13 = load i32, i32* %3, align 4
  %14 = and i32 %13, -129
  %15 = call i32 @pci_write_config_dword(i32 %11, i32 %12, i32 %14)
  %16 = load %struct.TYPE_2__*, %struct.TYPE_2__** @agp_bridge, align 8
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = load i32, i32* @VIA_AGP3_GARTCTRL, align 4
  %20 = load i32, i32* %3, align 4
  %21 = call i32 @pci_write_config_dword(i32 %18, i32 %19, i32 %20)
  ret void
}

declare dso_local i32 @pci_read_config_dword(i32, i32, i32*) #1

declare dso_local i32 @pci_write_config_dword(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
